# 2025-12-15-python-claude-ruvector

./: .gitignore  README.md  package.json  performance_results.txt  prompts.txt  pyproject.toml  pytest.ini  ruvector_server.js
src/brazilian_soccer_mcp/: __init__.py  data_loader.py  models.py  query_handlers.py  server.py  utils.py  vector_store.py
tests/: BDD_TEST_SUMMARY.md  INDEX.md  TEST_SCENARIOS_README.md  TEST_SCENARIO_MAP.md  __init__.py  conftest.py  run_tests.sh  test_match_queries.py  test_player_queries.py  test_statistics.py  test_team_queries.py
tests/features/: __init__.py  test_match_queries.py  test_performance.py  test_player_queries.py  test_statistics.py  test_team_queries.py
